# cookiecutter_fasterml

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.model_name}}_fasterml/: config.yml  docker-compose.yml  dockerfile  main.py  requirements.txt
{{cookiecutter.model_name}}_fasterml/schemas/: get_uid.json  make_dashboard.json  prometheus.yaml
{{cookiecutter.model_name}}_fasterml/src/: API.py  base_class_api.py  base_class_data.py  classes.py  exec.py  sqlite.py  yaml2pyclass.py  yaml_class.py
{{cookiecutter.repo_name}}/: config.yml  requirements.txt
{{cookiecutter.repo_name}}/src/: API.py  Trainable.py  main.py  sqlite.py
