[project]
name = "cookiecutter-fasterml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "pandas>=2.2.3",
    "prometheus-client>=0.21.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
    "starlette>=0.41.2",
]
